# im_old_greg

./: .gitignore  AGENTS.md  CLAUDE.MD  CLAUDE.md  README.md  SKILL.md  session_start.sh
.github/workflows/: build.yml
harness/: analogize.sh  ingest.sh  query.sh  relate.sh  run.sh  suggest.sh
reference/: metric_definitions.md  seed_harmonic_components.sh
src/curry/: Advisory.curry  Analogy.curry  Axes.curry  AxisSeeds.curry  Canonicalize.curry  Cbor.curry  Chores.curry  ImOldGreg.curry  Memo.curry  Metrics.curry  Query.curry  Storage.curry  Witness.curry  Wojak.curry
src/haskell/: FFIBridge.hs  Geometry.hs  GraphOps.hs  LinAlg.hs  greg-geom.cabal
templates/: chore_template.cbor  memo_template.cbor  pepo_template.cbor  wojak_template.cbor
tests/: TestAnalogy.curry  TestAxes.curry  TestMetrics.curry  TestQuery.curry  TestStorage.curry
